# pic-deploy

./: CMakeLists.txt  cibuild-win64.sh  main.cpp
.github/workflows/: deploy-win.yml
dishlib/: AbstractDish.h  CMakeLists.txt  DishBratwurst.cpp  DishBratwurst.h  DishFactory.h.in  DishPizzaMargherita.cpp  DishPizzaMargherita.h  DishVegetableSoup.cpp  DishVegetableSoup.h
